--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
